# aero-ros-pkg

./: .travis.yml  Dockerfile.kinetic
.github/: Dockerfile.dockerhub_kinetic  Dockerfile.dockerhub_melodic  pull.yml
aero_ros_controller/: CMakeLists.txt  package.xml  test.launch  test.typeFjsk.launch
aero_ros_controller/include/aero_ros_controller/: RobotInterface.hh
aero_ros_controller/src/: AeroHandController.cc  AeroInterfaceTest.cc  AeroMoveBaseRH.cc  RobotInterface.cc  aero_robot_hardware.cpp  aero_robot_hardware.h  aero_ros_controller.cpp  universal_robot_hw_shm.cpp  universal_robot_hw_shm.h
aero_ros_controller/test/: test_robot_interface.cpp
aero_samples/tests/: fullbody_test.cc
aero_startup/.templates/: CMakeLists.template
aero_startup/controller_wrapper/: aero_controller_wrapper.cc
aero_startup/include/aero_startup/: controller_shm.h  shm_struct.h
aero_std/: CMakeLists.txt
aero_std/include/aero_std/: AeroMoveitInterface.hh  IKSettings.hh
aero_std/src/: AeroMoveitInterface.cc  AeroMoveitTest.cc
